
[tool.poetry]
name = "geonames-api"
version = "0.1.0"
description = ""
authors = ["igor.ippin"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
bump2version = "^1.0.1"
httpx = "^0.23.0"
SQLAlchemy = "^1.4.37"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
